# codesage

./: CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  README.md  代码审查标准.md  分工协作.md  测试策略.md  问题跟踪.md
.claude/: settings.local.json
crates/codesage-ai/: Cargo.toml
crates/codesage-ai/src/: client.rs  lib.rs
crates/codesage-analyzer/: Cargo.toml
crates/codesage-analyzer/src/: analyzer.rs  lib.rs  metrics.rs
crates/codesage-cli/: Cargo.toml
crates/codesage-cli/src/: lib.rs  main.rs
crates/codesage-core/: Cargo.toml
crates/codesage-core/src/: error.rs  lib.rs  models.rs  traits.rs
crates/codesage-parser/: Cargo.toml
crates/codesage-parser/src/: lib.rs  parser.rs
crates/codesage-refactor/: Cargo.toml
crates/codesage-refactor/src/: lib.rs  refactor.rs
src/: main.rs
test_files/: FEATURE_STATUS.md  example_complex.rs  example_simple.rs
tests/: ai_client_tests.rs  analyzer_tests.rs  cli_integration_tests.rs  edge_case_tests.rs  parser_tests.rs
