[package]
name = "codesage"
version = "0.1.0"
edition = "2024"
authors = ["CodeSage Contributors"]
license = "MIT"
description = "AI-powered code review and refactoring tool"
repository = "https://github.com/yourusername/codesage"
readme = "README.md"
keywords = ["code-review", "refactoring", "ai", "static-analysis", "linting"]
categories = ["development-tools", "command-line-utilities"]

[workspace]
members = [
    "crates/codesage-core",
    "crates/codesage-parser",
    "crates/codesage-analyzer",
    "crates/codesage-ai",
    "crates/codesage-refactor",
    "crates/codesage-cli",
]

[dependencies]
# Main binary orchestrates the crates
codesage-core = { path = "crates/codesage-core" }
codesage-cli = { path = "crates/codesage-cli" }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
