[package]
name = "codesage-ai"
version = "0.1.0"
edition = "2024"
authors = ["CodeSage Contributors"]
license = "MIT"
description = "AI/LLM integration for intelligent code analysis"

[dependencies]
codesage-core = { path = "../codesage-core" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
