[package]
name = "codesage-parser"
version = "0.1.0"
edition = "2024"
authors = ["CodeSage Contributors"]
license = "MIT"
description = "Multi-language code parser using tree-sitter"

[dependencies]
codesage-core = { path = "../codesage-core" }
tree-sitter = "0.24"
anyhow = "1.0"

[dev-dependencies]
tree-sitter-rust = "0.23"
